Endpoint dostępnych dni nagrań